--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,8 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:IMAGE_TAG
+      #- docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - docker tag nodeapp:latest $REPOSITORY_URI:v1.0.0
   post_build:
     commands:
       - echo Build completed on `date`
